catalog page commit

--- a/src/Clients/BlazorWebApp/WebApp/_Imports.razor
+++ b/src/Clients/BlazorWebApp/WebApp/_Imports.razor
@@ -12,3 +12,7 @@
 
 @using Application.Services.Interfaces
 @using Domain.Models.User
+
+@using WebApp.Domain.Models.CatalogModels
+
+@using Domain.Models
