--- a/src/Clients/BlazorWebApp/WebApp/Pages/Catalog/CatalogPage.razor
+++ b/src/Clients/BlazorWebApp/WebApp/Pages/Catalog/CatalogPage.razor
@@ -15,6 +15,15 @@
     [Inject]
     ICatalogService catalogService { get; set; }
 
+    [Inject]
+    IIdentityService identityService { get; set; }
+
+    [Inject]
+    IBasketService basketService { get; set; }
+
+    [Inject]
+    NavigationManager navigationManager { get; set; }
+
     PaginatedItemsViewModel<CatalogItem> model = new PaginatedItemsViewModel<CatalogItem>();
 
     protected async override Task OnInitializedAsync()
@@ -24,6 +33,13 @@
 
     public async Task AddToCart(CatalogItem catalogItem)
     {
-        await Task.CompletedTask;
+        if (!identityService.IsLoggedIn)
+        {
+            navigationManager.NavigateTo($"login?returnUrl={Uri.EscapeDataString(navigationManager.Uri)}", true);
+            return;
+        }
+
+        await basketService.AddItemToBasket(catalogItem.Id);
+        //appState.IncreaseItemCount(this);
     }
 }
